--- a/src/app/forgot-password/forgot-password.component.html
+++ b/src/app/forgot-password/forgot-password.component.html
@@ -38,7 +38,7 @@ novalidate
     
             <div class="form-group"> 
                 <button type="submit" class="form-control btn btn-primary"  (click)="generateOtp()">
-                    <img src="../../assets/siddhi.jpg"  style="width: 24px;" alt="loadingSpinner.gif"/>
+                    <img src="../../assets/loading.svg"  style="width: 24px;" alt="loadingSpinner.gif"/>
                     Search Account</button>
             </div> 
             <div class="form-group">
