--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -12,3 +12,23 @@
     padding-left: 50px;
     padding-right: 50px;
 }
+
+form{
+    text-align: center;
+}
+
+
+#partitioned {
+    padding-left: 15px;
+    letter-spacing: 42px;
+    border: 0;
+    background-image: linear-gradient(to left, rgb(57, 17, 121) 70%, rgba(255, 255, 255, 0) 0%);
+    background-position: bottom;
+    background-size: 50px 1px;
+    background-repeat: repeat-x;
+    background-position-x: 35px;
+    width: 300px;
+  margin-left: 400px;
+  }
+
+  
