--- a/src/app/room/room.component.html
+++ b/src/app/room/room.component.html
@@ -1,39 +1,297 @@
-<div class="col-md-12">
-    <div class="card card-container">
- 
-      <label><strong>Add Room here</strong> </label>
-      <br>
-      <br>
-  
-      <form
-        *ngIf="!isSuccessful"
-        name="form"
-        #f="ngForm"
-        (ngSubmit)="f.form.valid && onSubmit()"
-       
-        novalidate
-      >
 
-      
-        <div class="form-group">
-          <label for="roomnumber">Room Number:</label>
-          <input
-            type="number"
-            class="form-control"
-            name="roomnumber"
-            [(ngModel)]="form.roomnumber"
-            required
+<div class="input-group">
+  <input type="search" class="form-control rounded" placeholder="Search Room by room Number and Room Type" 
+  [(ngModel)]="searchResult" 
+  (ngModelChange)="search()" aria-label="Search"
+    aria-describedby="search-addon" />
+</div>
+  <br>
 
-            #roomnumber="ngModel"
-          />
-          
-          <div class="alert-danger" *ngIf="f.submitted && roomnumber.invalid">
-            <div *ngIf="roomnumber.errors?.required">Room number is required</div>
-          
+<button class="btn btn-primary" (click)="viewHotelDetail()" *ngIf="showAddRoomPictureButton" data-toggle="modal" 
+data-target="#addRoomDetail" style="margin-bottom: 10px;"><i class="fas fa-plus"></i>Add Room Details</button>
+
+   <!-- Modal for add room detail -->
+   <div class="modal fade" id="addRoomDetail" tabindex="-1" role="dialog"
+    aria-labelledby="addRoomDetailCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="addRoomDetailLongTitle">Add Room Detail</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
         </div>
-         
+        <div class="modal-body">
+
+         <!-- Form start here -->
+         <form >
+
+         <div class="form-group">
+          <div class="modal-body">
+           <div class="container" style="width: 18 rem">
+             <label style="text-align: center;"><strong>HotelName</strong></label>
+             <select (change)="changeHotelnameHandler($event)" class="form-control">
+               <option selected>--select--</option>
+               <option
+                 *ngFor="let h of hotelDetail"
+                 value="{{ h.id }}"
+               >
+                 {{ h.hotelName }}
+               </option>
+               >
+             </select>
+           </div>
+           </div>
+          </div>
+        
+         <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="inputRoomNumber"><strong>Room Number</strong></label>
+            <input type="text" [(ngModel)]="roomNumber" name="roomNumber" class="form-control" 
+            id="roomNumber"  placeholder="Enter Room Number.....">
+           </div>
+
+           <div class="form-group col-md-6">
+            <label for="inputRoomType"><strong>Room Type</strong></label>
+            <input type="text" [(ngModel)]="roomType" name="roomType" class="form-control" 
+            id="roomType"  placeholder="Enter Room Type.....">
+           </div>   
+           </div>
+
+             <div class="mb-3">
+              <label for="inputDescription"><strong>Description</strong></label>
+              <textarea  [(ngModel)]="description" class="form-control" id="description" name="description" 
+               placeholder="Write the description of room....."></textarea>
+            </div>
+
+             <div class="modal-footer">
+                 <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                 <button (click)="addRoomDetail()" type="submit" class="btn btn-success">Add</button>
+               </div>
+             
+           </form>
         </div>
-    </form>
+    
+      </div>
+    </div>
+  </div>
+<br>
+
+
+<!--Room detail-->
+<div class="table-responsive">
+  <table class="table table-striped table-hover">
+      <thead>
+        <tr>
+          <th scope="col" (click)="sort('id')" >#<i class="fa fa-sort"></i></th>
+          <th scope="col" (click)="sort('hotelName')">HotelName<i class="fa fa-sort"></i></th>
+          <th scope="col" (click)="sort('roomType')" >RoomType <i class="fa fa-sort"></i></th>
+          <th scope="col" (click)="sort('roomNumber')">Room Number<i class="fa fa-sort"></i></th>
+          <th>Status</th>
+          <th scope="col">Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let room of roomDetail | orderBy : key:reverse 
+         |  paginate: { itemsPerPage: 5, currentPage: page,totalItems: totalRecords } ">
+             <td>{{ room.id }}</td> 
+             <td>{{ room.hotel.hotelName }}</td> 
+             <td>{{ room.roomType }}</td>
+             <td>{{ room.roomNumber }}</td>
+             <td>{{ room.active }}</td>
+             <td><button class="btn btn-danger"
+              mwlConfirmationPopover
+                [popoverTitle]="popoverTitle"
+                [popoverMessage]="popoverMessage"
+                placement="left"
+                (confirm)="deleteRoom(room.id)"
+                (cancel)="cancelClicked = true"
+                *ngIf="showDeleteButton"><i class="fa fa-trash"></i></button>|
+
+                <button  class="btn btn-secondary" (click)="ViewRoomDetailById(room.id)" 
+                 [hidden]="!showEditButtonOnNotReserved"   data-toggle="modal" 
+                 data-target="#editRoomModal"><i class="fas fa-edit" ></i></button>
+
+                <button   class="btn btn-secondary" (click)="reservedWalaEdit(room.id)" 
+                 [hidden]="!showEditButtonOnReserved"><i class="fas fa-edit" ></i></button>
+
+                <button (click)="ViewRoomDetailById(room.id)"  class="btn btn-success" 
+                 data-toggle="modal" data-target="#viewRoomModal"><i class="fas fa-eye"></i></button>|
+
+                 <button (click)="ViewRoomDetailById(room.id)"  class="btn btn-primary" 
+                 data-toggle="modal" data-target="#addRoomProfileModal"><i class="fa fa-plus"></i></button>|
+
+                 <a   class="btn btn-primary"  [routerLink]="['/room-picture', room.id]">  
+            <i class="fas fa-eye"></i></a></td> 
+      </tr>
+      </tbody>
+  </table>
+  <div >
+    <pagination-controls (pageChange)="page = $event" style="display: flex; float:right;"></pagination-controls>
     </div>
 </div>
-    
+  
+<!--Modal start here for view room detail-->
+<div class="modal fade" id="viewRoomModal" tabindex="-1" role="dialog" aria-labelledby="viewRoomModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="viewRoomModalLongTitle">View Room</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+
+          <!-- Form start here -->
+          <form>
+             
+            <div class="form-row">
+              <div class="form-group col-md-6">
+              <label for="inputHotelName">HotelName</label>
+              <input type="text"[(ngModel)]= "hotelName" name="hotelName" class="form-control" id="inputHotelName" readonly>
+            </div>
+
+            <div class="form-group col-md-6">
+              <label for="inputRoomType">Room type</label>
+              <input type="text" [(ngModel)]="roomType" name="roomType"  class="form-control" id="inputRoomType" readonly>
+              </div>
+            </div>
+
+            <div class="form-row">
+              <div class="form-group col-md-6">
+              <label for="inputHotelUserName">HotelUserName</label>
+              <input type="text"  [(ngModel)]="hotelUsername" name="hotelUsername" class="form-control" id="inputHotelUserName" readonly >
+              </div>
+
+
+            <div class="form-group col-md-6">
+              <label for="inputRoomNumber">Room Number</label>
+              <input type="text"[(ngModel)]="roomNumber" name="roomNumber" class="form-control" id="inputRoomNumber" readonly>
+            </div>
+            </div>
+
+          <!-- <div class="form-group">
+            <label for="inputRoomPhoto">Room Photo</label>
+            <input type="file" name="roomPhoto" class="form-control" id="inputRoomPhoto" >
+          </div> -->
+
+           <div class="form-group">
+            <label for="inputDescription">Description</label><br>
+            {{description }}
+            <!-- <textarea [(ngModel)]="description" name="description" class="form-control" id="inputDescription" readonly></textarea> -->
+          </div>
+
+          <div class="modal-footer">
+            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+           
+          </div>
+
+          </form>
+
+      </div>
+    </div>
+  </div>
+</div>
+
+<!--Modal start here for edit room detail-->
+<div class="modal fade" id="editRoomModal" tabindex="-1" role="dialog" aria-labelledby="editRoomModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="editRoomModalLongTitle">Edit Room</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+
+          <!-- Form start here -->
+          <form>
+             
+            <div class="form-row">
+              <div class="form-group col-md-6">
+              <label for="inputHotelName">HotelName</label>
+              <input type="text"[(ngModel)]= "hotelName" name="hotelName" class="form-control" id="inputHotelName1" readonly>
+            </div>
+
+            <div class="form-group col-md-6">
+              <label for="inputRoomType">Room type</label>
+              <input type="text" [(ngModel)]="roomType" name="roomType"  class="form-control" id="inputRoomType1" >
+              </div>
+            </div>
+
+            <div class="form-row">
+              <div class="form-group col-md-6">
+              <label for="inputHotelUserName">HotelUserName</label>
+              <input type="text"  [(ngModel)]="hotelUsername" name="hotelUsername" 
+              class="form-control" id="inputHotelUserName1" readonly >
+              </div>
+
+
+            <div class="form-group col-md-6">
+              <label for="inputRoomNumber">Room Number</label>
+              <input type="text"[(ngModel)]="roomNumber" name="roomNumber" class="form-control" id="inputRoomNumber1" >
+            </div>
+            </div>
+
+          <!-- <div class="form-group">
+            <label for="inputRoomPhoto">Room Photo</label>
+            <input type="file" name="roomPhoto" class="form-control" id="inputRoomPhoto" >
+          </div> -->
+
+           <div class="form-group">
+            <label for="inputDescription">Description</label>
+            <input type="text" [(ngModel)]="description" name="description" class="form-control" id="inputDescription1" >
+          </div>
+
+          <div class="modal-footer">
+            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+            <button (click)="editActiveRoomDetail(roomId)" type="button" class="btn btn-success" data-dismiss="modal">Edit</button>
+           
+          </div>
+
+          </form>
+
+      </div>
+    </div>
+  </div>
+</div>
+
+
+     <!-- Modal for add room picture -->
+     <div class="modal fade" id="addRoomProfileModal" tabindex="-1" role="dialog" aria-labelledby="addRoomProfileModalCenterTitle" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h3 class="modal-title" id="addRoomProfileModalLongTitle">Add Room Picture</h3>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+  
+           <!-- Form start here -->
+           <form 
+          
+           >      
+              <div class="form-group">
+                <label for="inputProfilePicture">Profile Picture</label>
+                <input type="file" class="form-control" name="file" id="profile" (change)="selectFileHandler($event)" required/>
+              </div>
+   
+               <div class="modal-footer">
+                   <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                   <button (click)="uploadRoomPicture(roomId)" type="submit" class="btn btn-success">Upload</button>
+                 </div>
+               
+             </form>
+  
+  
+          </div>
+      
+        </div>
+      </div>
+    </div>
+  <br>
+
