--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -18,7 +18,7 @@ form{
 }
 
 
-#partitioned {
+/* #partitioned {
     padding-left: 15px;
     letter-spacing: 42px;
     border: 0;
@@ -29,6 +29,6 @@ form{
     background-position-x: 35px;
     width: 300px;
   margin-left: 400px;
-  }
+  } */
 
   
