--- a/src/app/hotel-picture/hotel-picture.component.html
+++ b/src/app/hotel-picture/hotel-picture.component.html
@@ -14,6 +14,8 @@ style="margin-top: 8px; margin-bottom: 10px;">view picture detail</button>
                     <span>No images for this Hotel</span>
             </div>
 
+           <a class="btn btn-secondary" (click)="backClicked()"  style="margin-top: 8px;"><i class="fas fa-hand-point-left" ></i>Back</a>
+
             <!-- Modal -->
  <div class="modal fade" id="viewHotelPicture" tabindex="-1" role="dialog" aria-labelledby="viewHotelPictureCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
