--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -20,7 +20,14 @@
                     <div >{{currentUser.email}}</div><br>
                     <div><b>{{currentUser.roles}}</b></div>
                 </div>
+
+                <div class="container" *ngIf="buttonForHotel">
+                <a   class="btn btn-primary btn-sm"  [routerLink]="['/hotel-detail', hotelId]" >  
+                  <i class="fas fa-eye"></i>View Hotel Detail</a>
              
+                <!-- <button class="btn btn-primary btn-sm" *ngIf="buttonForHotel" data-toggle="modal" (click)="getHotel()"
+                data-target="#viewHotelModal" style="width: 200px; margin-left: 100px; margin-top: 10px;">View Hotel Detail</button> -->
+              </div>
             </div>
             
         <!-- </div> -->
@@ -125,12 +132,10 @@
                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
                    <button (click)="editProfilePic()" type="submit" class="btn btn-success">Update</button>
                  </div>
-               
-
-  
-  
+          
           </div>
-      
         </div>
       </div>
     </div>
+
+
