--- a/src/app/room/room.component.html
+++ b/src/app/room/room.component.html
@@ -118,7 +118,7 @@ data-target="#addRoomDetail" style="margin-bottom: 10px;"><i class="fas fa-plus"
                 <button (click)="ViewRoomDetailById(room.id)"  class="btn btn-success" 
                  data-toggle="modal" data-target="#viewRoomModal"><i class="fas fa-eye"></i></button>|
 
-                 <button (click)="ViewRoomDetailById(room.id)"  class="btn btn-primary" 
+                 <button (click)="ViewRoomDetailById(room.id)"  class="btn btn-primary" *ngIf="showAddRoomPictureButton"
                  data-toggle="modal" data-target="#addRoomProfileModal"><i class="fa fa-plus"></i></button>|
 
                  <a   class="btn btn-primary"  [routerLink]="['/room-picture', room.id]">  
@@ -170,11 +170,6 @@ data-target="#addRoomDetail" style="margin-bottom: 10px;"><i class="fas fa-plus"
               <input type="text"[(ngModel)]="roomNumber" name="roomNumber" class="form-control" id="inputRoomNumber" readonly>
             </div>
             </div>
-
-          <!-- <div class="form-group">
-            <label for="inputRoomPhoto">Room Photo</label>
-            <input type="file" name="roomPhoto" class="form-control" id="inputRoomPhoto" >
-          </div> -->
 
            <div class="form-group">
             <label for="inputDescription">Description</label><br>
